--- a/public/css/contacts.css
+++ b/public/css/contacts.css
@@ -1,5 +1,4 @@
-/* Reset some default browser styles */
-body, h1, p, form, table, th, td {
+form, table, th, td {
   margin: 0;
   padding: 0;
 }
@@ -20,6 +19,7 @@ body {
 
 h1, h2 {
   color: #333;
+  text-align: center;
 }
 
 p {
@@ -37,7 +37,7 @@ label {
 }
 
 input[type="text"] {
-  width: 100%;
+  width: 40%;
   padding: 10px;
   margin-bottom: 15px;
   border: 1px solid #ccc;
@@ -58,6 +58,17 @@ input[type="submit"]:hover {
   background-color: #45a049;
 }
 
+.search-bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+#search {
+  width: 300px;
+}
+
 .table-container {
   margin-top: 20px;
 }
@@ -65,6 +76,7 @@ input[type="submit"]:hover {
 .contact-table {
   width: 50%;
   border-collapse: collapse;
+  margin: 0 auto;
 }
 
 .contact-table th, .contact-table td {
@@ -106,12 +118,4 @@ input[type="submit"]:hover {
 
 .search-bar input[type="text"] {
   width: 300px;
-}
-
-.search-bar input[type="submit"] {
-  background-color: #555;
-}
-
-.search-bar input[type="submit"]:hover {
-  background-color: #333;
 }
